@@ -30,14 +30,14 @@ DIST texlive-basicbin-2007.tar.bz2 9135882 RMD160 1ba9588e33fa19ab87371943e1ca5f
 DIST texlive-binextra-2007.tar.bz2 548653 RMD160 719967c6249a1d12aa3e17d581547a5d9839f642 SHA1 dc7d31391ccd31c33c30a2d85ddb80acede18a16 SHA256 d90ad4ee76180cfc5547f84a926e218ce6eab29add4f7b5310b9fd8827bd6c44
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
 DIST texlive-fontbin-2007.tar.bz2 2300119 RMD160 6bab22424b58c9751c4fdad0bdecb985b18379cb SHA1 c905e192491a24b7864ffa17dc0f9c74429555c7 SHA256 8d42376c9e11d12a0280c464672d633c1ca0be6bd01ac98e28c71aaab18d0da1
-EBUILD texlive-core-2007.ebuild 5821 RMD160 49c2703744f9636e04113aa76b2088e99c020360 SHA1 40dca71e793b292a11304f5aea0c3b0f29cb76e8 SHA256 19cc9f6f75df9ed974b9b6c12cb6ae8f2b71ebc53a69e881a89773c0d7ca808e
-MD5 2a1e06847182942bdf52caa80302543c texlive-core-2007.ebuild 5821
-RMD160 49c2703744f9636e04113aa76b2088e99c020360 texlive-core-2007.ebuild 5821
-SHA256 19cc9f6f75df9ed974b9b6c12cb6ae8f2b71ebc53a69e881a89773c0d7ca808e texlive-core-2007.ebuild 5821
-MISC ChangeLog 3782 RMD160 078ab0e59a66c2a20f57fab97b0fde121a341bed SHA1 579930e1aea2ebb552dfc14ce20862b512435047 SHA256 849f0568e3506ed82c02d45a8540eaddf6fc277a211a1e9c50e5f84e604ec119
-MD5 43eb080d82fe420af264325998107e99 ChangeLog 3782
-RMD160 078ab0e59a66c2a20f57fab97b0fde121a341bed ChangeLog 3782
-SHA256 849f0568e3506ed82c02d45a8540eaddf6fc277a211a1e9c50e5f84e604ec119 ChangeLog 3782
+EBUILD texlive-core-2007.ebuild 6414 RMD160 61953a7e9a22084261c2df59ceaec89d9a5832e4 SHA1 9b1e910c4b9dc60ac6a7499accd4135784ac0d01 SHA256 2344f8e7f6b5e4a4219a7640293b7e01b20766060f8be32a9762f89a56950dcb
+MD5 b023fffb44c97b1297b4e8ef9ec9a102 texlive-core-2007.ebuild 6414
+RMD160 61953a7e9a22084261c2df59ceaec89d9a5832e4 texlive-core-2007.ebuild 6414
+SHA256 2344f8e7f6b5e4a4219a7640293b7e01b20766060f8be32a9762f89a56950dcb texlive-core-2007.ebuild 6414
+MISC ChangeLog 4073 RMD160 de4f74a572df97f152a6665d48872c06dec2532d SHA1 5766baad76f084f08d12bdb45b75aa7085a1f3b4 SHA256 8cb42627e8ff46024466d62ae2352060d94a14955059d1f5d533ffac34daca93
+MD5 3fa45f6402f90ec2556452e7b395375f ChangeLog 4073
+RMD160 de4f74a572df97f152a6665d48872c06dec2532d ChangeLog 4073
+SHA256 8cb42627e8ff46024466d62ae2352060d94a14955059d1f5d533ffac34daca93 ChangeLog 4073
 MD5 f1925aa6bf2fbc1d70e86be14a589283 files/digest-texlive-core-2007 1069
 RMD160 b9c4b0fac91248104c1c9f04e7e0a4b83a199551 files/digest-texlive-core-2007 1069
 SHA256 2f5ac7d299c66c05082e6a56afd9dfa2a4a76c98bf8cda6ce0d493e2611c540e files/digest-texlive-core-2007 1069
